--- a/assets/index.css
+++ b/assets/index.css
@@ -61,13 +61,38 @@ canvas#canv {
     flex-direction: column;
 }
 
-.float-option input {
+.float-option .input {
     float: right;
     width: 45%
 }
 
-.float-option {
+.input input[type="color"] {
+    width: 85%;
+}
+
+.input input[type="checkbox"] {
+    width: 12%;
+    margin: 0;
+}
+
+.float-option, .non-float-option {
     margin: 10px 10px 10px 10px
+}
+
+.non-float-option .label-container {
+    margin-bottom: 5px;
+}
+
+.menu-slider {
+    width: 100%;
+    justify-items: center;
+    align-items: center;
+    display: grid;
+    grid-template-rows: 1fr;
+}
+
+.menu-slider input {
+    width: 100%;
 }
 
 .radio-option {
@@ -77,6 +102,19 @@ canvas#canv {
 
 .radio-option label {
     padding-left: 0.25em;
+}
+
+.multi-text {
+    display: grid;
+    grid-template-columns: 0.5fr 2fr 0.5fr 2fr;
+}
+
+.multi-text > label {
+    width: 90%;
+}
+
+.multi-text > input {
+    width: 90%;
 }
 
 .apply-btn {
